# cortana

./: .gitignore  Cargo.toml  ca-certificate.crt
src/: emblem_request.rs  emblem_response.rs  main.rs  match_checker.rs  match_request.rs  match_response.rs  matches_request.rs  matches_response.rs
src/match_checker/: request.rs  response.rs
